@@ -1,30 +1,29 @@
 package sample;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.Random;
 
 public class LabSolve {
 
     public static void main(String[] args) {
-        int maze[][] = LabCreate.mazeFulfill(LabCreate.mazeCreate(25 , 25));
 
-        ArrayList<int[]> result = solveMaze(maze);
-
-        int num = 0;
-        for(int[] step : result){
-            System.out.println(num);
-            System.out.println("Height: " + step[0]);
-            System.out.println("Length: " + step[1]);
-            num++;
-        }
     }
 
     public static final int way = 7;
 
     public static int[][] resultMaze;
+    private static ArrayList<int[]> resultWay;
+
+
+    /**
+     * method which solve maze
+     * @param maze
+     * @return
+     */
 
     public static ArrayList<int[]> solveMaze(int[][] maze){
-        ArrayList<int[]> resultWay = new ArrayList<>();
+        resultWay = new ArrayList<>();
 
         int[] oneStep = new int[2];
         int height = 1;
@@ -36,13 +35,11 @@ public class LabSolve {
 
         while(maze[maze.length - 2][maze[0].length - 2] != way){
             if(isImpasse(maze , height , length)){
-                int[] nextStep = branches.get(branches.size() - 1);
-                branches.remove(branches.size() - 1);
+                int[] nextStep = branches.getLast();
+                branches.removeLast();
                 removeFrom(resultWay , nextStep);
                 height = nextStep[0];
                 length = nextStep[1];
-                System.out.println("Height: " + height);
-                System.out.println("Length: " + length);
                 maze[height][length] = way;
                 resultWay.add(nextStep);
             }
@@ -50,22 +47,25 @@ public class LabSolve {
             oneStep = getCoordinates(maze , height , length);
             height = oneStep[0];
             length = oneStep[1];
-            System.out.println("Height: " + height);
-            System.out.println("Length: " + length);
 
             maze[height][length] = way ;
             resultWay.add(oneStep);
-
-            resultMaze = maze;
         }
 
-        branches.removeAll(branches);
+        branches.clear();
         resultMaze = maze;
         return resultWay;
     }
 
-    private static ArrayList<int[]> branches = new ArrayList<>();
-    private static int[] previousBranch;
+    private static LinkedList<int[]> branches = new LinkedList<>();
+
+    /**
+     * this method return next coordinates
+     * @param maze
+     * @param height
+     * @param length
+     * @return
+     */
 
     private static int[] getCoordinates(int[][] maze , int height , int length){
         ArrayList<int[]> ways = new ArrayList<>();
@@ -85,16 +85,22 @@ public class LabSolve {
         }
 
         Random rnd = new Random();
-        System.out.println(ways.size());
         res = ways.get(rnd.nextInt(ways.size()));
 
         if(ways.size() > 1){
-            previousBranch = new int[]{height , length};
-            branches.add(previousBranch);
+            branches.add(new int[]{height , length});
         }
 
         return res;
     }
+
+    /**
+     * return true if this step is impasse
+     * @param maze
+     * @param height
+     * @param length
+     * @return
+     */
 
     private static boolean isImpasse(int[][] maze , int height , int length){
         if((height + 1 < maze.length) && (maze[height + 1][length] == LabCreate.step)){
@@ -109,6 +115,13 @@ public class LabSolve {
 
         return true;
     }
+
+    /**
+     * remove part of ArrayList from exact number
+     * @param resultWay
+     * @param from
+     * @return
+     */
 
     private static ArrayList<int[]> removeFrom(ArrayList<int[]> resultWay , int[] from){
         for(int i = 0; i < resultWay.size(); i++){
